objects/MembershipExpiration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Type__c</fullName>
        <label>Cancellation Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpireAfterDays__c</fullName>
        <label>ExpireAfterDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfDaysGrace__c</fullName>
        <label>NumberOfDaysGrace</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MembershipExpiration</label>
</CustomObject>